--- a/package.json
+++ b/package.json
@@ -8,8 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/react-redux": "^7.1.9",
+    "@types/styled-components": "^5.1.0",
+    "axios": "^0.19.2",
     "next": "9.4.4",
+    "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.13",
+    "@types/react": "^16.9.36",
+    "babel-plugin-styled-components": "^1.10.7",
+    "typescript": "^3.9.5"
   }
 }
